--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  flutter_hooks: ^0.18.6
+  hooks_riverpod: ^2.3.6
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
