--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_riverpod: ^2.3.6
+  #flutter_riverpod: ^2.3.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,7 +38,8 @@ dependencies:
 
   flutter_hooks: ^0.18.6
   hooks_riverpod: ^2.3.6
-
+  flutter_riverpod: 2.3.6
+  uuid: ^3.0.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
